# nzshm-hazlab

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  codecov.yml  mkdocs.yml  pyproject.toml  setup.cfg
.githooks/: pre-push
.github/: codecov.yml
.github/workflows/: dev.yml  release.yml
docs/: installation.md  testing.md  usage.md
docs/api/: base_functions.md  index.md
docs/api/data/: index.md
docs/api/data/data_loaders/: index.md
docs/api/plot/: index.md
haz-report-pkg/: requirements.txt  setup.py
haz-report-pkg/oq_hazard_report/: __init__.py  aggregate_rlzs.py  aggregate_rlzs_test.py  aggrigate_rlzs_test.py  base_functions.py  data_functions.py  disagg_data_functions.py  disagg_plotting_functions.py  disagg_plotting_functions_old.py  disagg_report_builder.py  hazard_data.py  map_plotting_functions.py  parse_metadata.py  plotting_functions.py  prepare_design_intensities.py  read_oq_hazstore.py  read_oq_hdf5.py  read_oq_hdf5_old.py  report_builder.py  scratch.py
haz-report-pkg/oq_hazard_report/resources/: css_template.py
hdf5_postprocessing/: create_hcurve_figures.ipynb  parse_metadata.py  plotting_functions.py  read_oq_hdf5.py  storing data and metadata.ipynb  test_data_retrieval.ipynb
nzshm_hazlab/: __init__.py  base_functions.py  constants.py  data_functions.py  disagg_data_functions.py  disagg_plotting_functions.py  hazard_curves.py  locations.py  map_plotting_functions.py  plotting_functions.py  prepare_design_intensities.py  read_oq_hazstore.py  read_oq_hdf5.py  store.py
nzshm_hazlab/data/: __init__.py  disaggregations.py  grids.py  hazard_curves.py
nzshm_hazlab/data/data_loaders/: __init__.py  data_loader.py  data_loaders.py  dynamo_loader.py  oq_csv_loader.py  thp_loader.py  ths_loader.py
nzshm_hazlab/data_loaders/: data_loader.py  thp_loader.py
nzshm_hazlab/hazard_report/: __init__.py  disagg_report_builder.py  report_builder.py
nzshm_hazlab/misc/: mean_mag.py
nzshm_hazlab/plot/: __init__.py  constants.py  disagg.py  disaggregation.py  hazard_curve.py  hazard_map.py
nzshm_hazlab/store/: curves.py  curves_v2.py  curves_v4.py  levels.py
scratch/: U2NhbGVkSW52ZXJzaW9uU29sdXRpb246MTIwNjk4-ruptures_sections_traces.geojson  calculation_flowchart.html  calculation_flowchart.md  cr_colormap.py  download_hazard_curves.md  find_duplicate_grid.py  hazard_flowchart.html  hazard_flowchart.md  hazard_flowchart.mmd  hazard_flowchart_v2.html  missing_locs.py  mmd_style.css  plot_close_points.py  read_model.ipynb  sources-7fa8d56_sections_traces.geojson  spectra_for_ak.py  test.md  test_download.py  toy_lt.html  toy_lt.md
scripts/: PGA Hazard Maps.ipynb  PGA_Hazard_Map_for_0pt1_degree_grid.ipynb  THS_spot_check.py  Uncertainty Maps.ipynb  aggrigate_rlzs_test.py  average_disagg.py  branch_explorer.py  calc_mean_dists.py  calc_mean_mags.py  check_disagg.py  check_haz_curves.py  compare_disaggs.py  compare_models.py  compare_ratesum.py  compare_thp_v1_v2.py  demo_thp_v2.py  disagg_workbench.py  download_curves_and_uhs.py  download_hdf5.py  download_source_files.py  dump_THS.py  extract disagg.ipynb  extract_disaggs.py  find_oq_diff.py  inv_comp.py  investigate_disaggs.py  plot_CoV_map.py  plot_CoV_map_v2.py  plot_background.py  plot_branch_weights.py  plot_cities.py  plot_disagg.py  plot_disaggs.py  plot_fromTHS.py  plot_fromdf.py  plot_fromdf_comp.py  plot_full_diagg.py  plot_hazard_curves.py  plot_hazard_diff_map.py  plot_hazard_fromcsv.py  (+36 more)
scripts/compare/: compare_crustal_C.py  compare_crustal_N.py  compare_crustal_def.py  compare_hazard.py  compare_hazard_jumpdist.py  compare_hazard_jumpdist_v2.py  compare_hazard_polygons.py  compare_hik_C.py  compare_hik_N.py  compare_hik_Nscale.py  compare_hik_b.py  compare_hik_def.py  compare_jump_distance.py  create_tornado.py
scripts/cpts/: plasma_0_1.5.cpt  plasma_0_1p5_extended.cpt
tests/: conftest.py  helpers.py  test_base_functions.py
tests/data/: test_disaggregations.py  test_grids.py  test_hazard_curves.py
tests/data/data_loaders/: test_csv_loader.py  test_thp_loader.py  test_ths_loader.py
tests/data/fixtures/: hazard_curve-mean-SA(0.5)_1.csv  hazard_curve-mean-SA(1.0)_1.csv  hazard_curve-mean-SA(10.0)_1.csv  quantile_curve-0.1-SA(1.0)_1.csv
tests/data/fixtures/csv_loader/: hazard_curve-mean-SA(5.0)_1.csv  quantile_curve-0.1-PGA_1.csv
tests/fixtures/data/csv_loader/: TRT_Mag_Dist_Eps-mean-0_31.csv  TRT_Mag_Dist_Eps-mean-0_32.csv  TRT_Mag_Dist_Eps-mean-1_31.csv  hazard_curve-mean-PGA_1.csv  hazard_curve-mean-SA(0.2)_1.csv  (+2 more)
tests/plot/: test_disagg.py  test_disaggregation.py  test_hazard_curve.py  test_hazard_map.py
(+56 files in other folders)
