[project]
name = "nzshm-hazlab"
version = "0.1.0"
readme = "README.md"
authors = [
  {name = "Chris DiCaprio", email = "christopher.dicaprio@gmail.com"},
]
description = "A laboratory for exploring hazard models"
license = "AGPL-3.0"

[tool.poetry]
packages = [{include = "nzshm_hazlab"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nzshm-common = "^0.8.4"
matplotlib = "^3.10.3"
pandas = "^2.2.3"
numpy = "<2"
toshi-hazard-store = "^1.0.0"
pyside6 = "^6.9.0"

[tool.poetry.group.dev.dependencies]
tox = "^4.26.0"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.2.0"
bump2version = "^1.0.1"
flake8-docstrings = "^1.7.0"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
mypy = "^1.15.0"
ipython = "^9.2.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.6.14"
mkdocs = "^1.6.1"
mkdocs-include-markdown-plugin = "^7.1.5"
mkdocstrings = {extras = ["python"], version = "^0.29.1"}

[tool.poetry.extras]
graphics = ["pyqt5"]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
