[project]
name = "nzshm-hazlab"
version = "0.1.0"
description = "A laboratory for exploring hazard models"
readme = "README.md"
authors = [
  {name = "Chris DiCaprio", email = "christopher.dicaprio@gmail.com"},
]
license = "AGPL-3.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "matplotlib (>=3.10.3, <4.0.0)",
  "pandas (>=2.2.3, <3.0.0)",
  "numpy<2",
  "cartopy (>=0.24.1, <0.25.0)",
  "toshi-hazard-post (>=0.7.1,<0.8.0)",
  "toshi-hazard-store (>=1.2.4,<2.0.0)",
  "nzshm-model (<0.14.0)",
  "nzshm-common (<0.9.0)",
]

[project.optional-dependencies]
interactive = [
  "ipython",
  "jupyterlab"
]

[tool.poetry]
packages = [{include = "nzshm_hazlab"}]

[dependency-groups]
dev = [
  "tox",
  "isort",
  "black",
  "flake8",
  "bump2version",
  "flake8-docstrings",
  "pytest",
  "pytest-cov",
  "mypy",
  "pytest-mock",
  "safety (>=3.6.2,<4.0.0)",
  "pip-audit (>=2.9.0,<3.0.0)",
]
doc = [
  "mkdocs-material",
  "mkdocs",
]

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
