[project]
name = "nzshm-hazlab"
version = "0.1.3"
description = "A laboratory for exploring hazard models"
readme = "README.md"
authors = [
  {name = "Chris DiCaprio", email = "christopher.dicaprio@gmail.com"},
]
license = "AGPL-3.0"
requires-python = ">=3.11,<3.13"
dependencies = [
  "matplotlib>=3.10.3,<4.0.0",
  "pandas>=2.2.3,<3.0.0",
  "numpy>=1.26.4,<2",
  "cartopy>=0.24.1,<0.25.0",
  "toshi-hazard-post>=0.7.1",
  "toshi-hazard-store>=1.4.3,<2.0.0",
  "nzshm-model>=0.14.2",
  "nzshm-common>=0.9.3",
]

[project.optional-dependencies]
interactive = [
  "ipython>=9.9.0",
  "jupyterlab>=4.5.2",
]

[dependency-groups]
dev = [
  "tox",
  "tox-uv",
  "ruff",
  "bump2version",
  "pytest",
  "pytest-cov",
  "mypy",
  "pytest-mock",
  "safety>=3.6.2,<4.0.0",
  "pip-audit>=2.9.0,<3.0.0",
]
doc = [
  "mkdocs-material",
  "mkdocs",
  "mkdocs-include-markdown-plugin>=7.2.0,<8.0.0",
  "mkdocstrings>=1.0.1,<2.0.0",
  "mkdocstrings-python>=2.0.1,<3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["nzshm_hazlab"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
exclude-newer = "1 week"
exclude-newer-package = { "nzshm-common" = false, "nzshm-model" = false, "toshi-hazard-post" = false, "toshi-hazard-store" = false }

[tool.uv.sources]
toshi-hazard-store = { git = "https://github.com/GNS-Science/toshi-hazard-store.git", branch = "feature/160-disagg-agg-query" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = ["D100", "D103"]

[tool.ruff.format]
quote-style = "preserve"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
